--- a/src/styles/scss/pages/landing/projects.scss
+++ b/src/styles/scss/pages/landing/projects.scss
@@ -18,7 +18,7 @@
     justify-content: left;
     align-items: center;
     .projectCard {
-      width: 400px;
+      width: 350px;
       height: 400px;
       border: 1px colors.$white solid;
       border-radius: 21px;
@@ -58,7 +58,7 @@
 @include res.responsive(tablet) {
   .projectCards {
     .projectCard {
-      width: 400px !important;
+      width: 350px !important;
       height: 400px !important;
     }
   }
